Password reset and account confirm (#24)
